k8s/base/sre-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: sre
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.172-24-0-241.nip.io`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: sre-tls
